added get product by id and temp add product
